--- a/styles/style.css
+++ b/styles/style.css
@@ -255,8 +255,8 @@ body {
     padding-top: 50px;
     padding-left: 10px;
     width: 80%;
-    border-style: solid;
     border-radius: 1%;
+    padding-left: 0px;
   }
 
 
